[package]
name = "solana-transfer-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
serde_json = "1.0.114"
solana-client = "1.18.3"
solana-pubsub-client = "1.18.3"
solana-rpc-client-api = "1.18.3"
solana-sdk = "1.18.3"
solana-transaction-status = "1.18.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
